--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,12 +1,12 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons');
-
+@import '~vuetify/dist/vuetify.min.css';
 // Variables
-@import 'variables';
+//@import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//@import '~bootstrap/scss/bootstrap';
 
 @import '~vuetify/dist/vuetify.min.css' ;// Ensure you are using css-loader
 
