--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,7 +10,7 @@
 
 @import '~vuetify/dist/vuetify.min.css' ;// Ensure you are using css-loader
 
-
+@import '~simplemde/dist/simplemde.min.css';
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
